Enable gradle daemon for travis